--- a/Memoria/capitulos/04_Planificacion.tex
+++ b/Memoria/capitulos/04_Planificacion.tex
@@ -86,6 +86,7 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
     \item \textbf{HU6 - } Como usuario quiero seleccionar una lección para leer el temario. (Prioridad: Alta | Puntos de Historia: 1)
     \item \textbf{HU7 - } Como usuario quiero empezar un test de una lección. (Prioridad: Alta | Puntos de Historia: 1)
     \item \textbf{HU26 - } Como usuario quiero responder una pregunta de un test del tipo escritura de texto. (Prioridad: Alta | Puntos de Historia: 1)
+    \item \textbf{HU31 - } Como usuario quiero ver todas las lecciones. (Prioridad: Alta | Puntos de Historia: 0.5)
     \item \textbf{HU8 - } Como usuario quiero responder una pregunta de un test del tipo selección múltiple. (Prioridad: Alta | Puntos de Historia: 1)
     \item \textbf{HU9 - } Como usuario quiero responder una pregunta de un test del tipo selección única. (Prioridad: Alta | Puntos de Historia: 1)
     \item \textbf{HU10 - } Como usuario quiero responder una pregunta de un test del tipo respuesta por micrófono. (Prioridad: Alta | Puntos de Historia: 8)
@@ -172,9 +173,8 @@ que utilizará la aplicación, tales como el registro, el login, la selección d
     \item HU1 - Como usuario quiero registrarme en la aplicación.
     \item HU2 - Como usuario quiero iniciar sesión en la aplicación.
     \item HU6 - Como usuario quiero seleccionar una lección para leer el temario.
-    \item HU7 - Como usuario quiero empezar un test de una lección.
-    \item HU29 - Como profesor quiero ver una lista de todas las preguntas.
-
+    \item HU31 - Como usuario quiero ver todas las lecciones.
+    \item HU28 - Como profesor quiero ver una lista de todas las lecciones.
 \end{itemize}
 
 
@@ -184,6 +184,7 @@ que utilizará la aplicación, tales como el registro, el login, la selección d
 Este Sprint tendrá como objetivo el desarrollo de los tests permitiendo al usuario responder a las preguntas y ver el resultado.
 Además, podrá comprobar su progreso en cada lección y en la pantalla principal que muestra todas las lecciones (desbloqueando las correspondientes en su caso).
 \begin{itemize}
+    \item HU7 - Como usuario quiero empezar un test de una lección.
     \item HU26 - Como usuario quiero responder una pregunta de un test del tipo escritura de texto.
     \item HU8 - Como usuario quiero responder una pregunta de un test del tipo selección múltiple.
     \item HU9 - Como usuario quiero responder una pregunta de un test del tipo selección única.
@@ -211,7 +212,7 @@ supera los puntos de historia de un Sprint.
 
 
 \begin{itemize}
-    \item HU28 - Como profesor quiero ver una lista de todas las lecciones.
+    \item HU29 - Como profesor quiero ver una lista de todas las preguntas.
     \item HU14 - Como profesor quiero crear una lección.
     \item HU15 - Como profesor quiero modificar el texto de una lección.
     \item HU16 - Como profesor quiero añadir contenido multimedia a una lección.
