--- a/Memoria/proyecto.tex
+++ b/Memoria/proyecto.tex
@@ -83,7 +83,7 @@
 \fancyhead[RO,LE]{\textbf{\thepage}}
 \renewcommand{\chaptermark}[1]{\markboth{\textbf{#1}}{}}
 \renewcommand{\sectionmark}[1]{\markright{\textbf{\thesection. #1}}}
-
+\setcounter{secnumdepth}{5} 
 \setlength{\headheight}{1.5\headheight}
 
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
